@@ -487,19 +487,21 @@
 #define IDS_COLHDR_EXTENSION            17701
 #define IDS_COLHDR_LSIZE                17702
 #define IDS_COLHDR_RSIZE                17703
-#define IDS_COLHDR_LTIMEC               17704
-#define IDS_COLHDR_RTIMEC               17705
-#define IDS_COLHDR_NEWER                17706
-#define IDS_COLHDR_LVERSION             17707
-#define IDS_COLHDR_RVERSION             17708
-#define IDS_COLHDR_RESULT_ABBR          17709
-#define IDS_COLHDR_LATTRIBUTES          17710
-#define IDS_COLHDR_RATTRIBUTES          17711
-#define IDS_COLHDR_LENCODING            17712
-#define IDS_COLHDR_RENCODING            17713
-#define IDS_COLHDR_NDIFFS               17714
-#define IDS_COLHDR_NSDIFFS              17715
-#define IDS_COLHDR_BINARY               17716
+#define IDS_COLHDR_LSIZE_SHORT          17704
+#define IDS_COLHDR_RSIZE_SHORT          17705
+#define IDS_COLHDR_LTIMEC               17706
+#define IDS_COLHDR_RTIMEC               17707
+#define IDS_COLHDR_NEWER                17708
+#define IDS_COLHDR_LVERSION             17709
+#define IDS_COLHDR_RVERSION             17710
+#define IDS_COLHDR_RESULT_ABBR          17711
+#define IDS_COLHDR_LATTRIBUTES          17712
+#define IDS_COLHDR_RATTRIBUTES          17713
+#define IDS_COLHDR_LENCODING            17714
+#define IDS_COLHDR_RENCODING            17715
+#define IDS_COLHDR_NDIFFS               17716
+#define IDS_COLHDR_NSDIFFS              17717
+#define IDS_COLHDR_BINARY               17718
 #define IDS_CANT_COMPARE_FILES          17728
 #define IDS_FILE_SKIPPED                17729
 #define IDS_DIR_SKIPPED                 17730
@@ -523,19 +525,21 @@
 #define IDS_COLDESC_EXTENSION           17765
 #define IDS_COLDESC_LSIZE               17766
 #define IDS_COLDESC_RSIZE               17767
-#define IDS_COLDESC_LTIMEC              17768
-#define IDS_COLDESC_RTIMEC              17769
-#define IDS_COLDESC_NEWER               17770
-#define IDS_COLDESC_LVERSION            17771
-#define IDS_COLDESC_RVERSION            17772
-#define IDS_COLDESC_RESULT_ABBR         17773
-#define IDS_COLDESC_LATTRIBUTES         17774
-#define IDS_COLDESC_RATTRIBUTES         17775
-#define IDS_COLDESC_LENCODING           17776
-#define IDS_COLDESC_RENCODING           17777
-#define IDS_COLDESC_NDIFFS              17778
-#define IDS_COLDESC_NSDIFFS             17779
-#define IDS_COLDESC_BINARY              17780
+#define IDS_COLDESC_LSIZE_SHORT         17768
+#define IDS_COLDESC_RSIZE_SHORT         17769
+#define IDS_COLDESC_LTIMEC              17770
+#define IDS_COLDESC_RTIMEC              17771
+#define IDS_COLDESC_NEWER               17772
+#define IDS_COLDESC_LVERSION            17773
+#define IDS_COLDESC_RVERSION            17774
+#define IDS_COLDESC_RESULT_ABBR         17775
+#define IDS_COLDESC_LATTRIBUTES         17776
+#define IDS_COLDESC_RATTRIBUTES         17777
+#define IDS_COLDESC_LENCODING           17778
+#define IDS_COLDESC_RENCODING           17779
+#define IDS_COLDESC_NDIFFS              17780
+#define IDS_COLDESC_NSDIFFS             17781
+#define IDS_COLDESC_BINARY              17782
 #define IDS_DIRECTORY_REPORT_TITLE      17792
 #define IDS_REPORT_COMMALIST            17793
 #define IDS_REPORT_TABLIST              17794
